<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:id="@+id/ESTButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTimeButtonClicked"
        android:text="@string/ESTButtonName" />

    <Button
        android:id="@+id/CSTButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTimeButtonClicked"
        android:text="@string/CSTButtonName" />

    <Button
        android:id="@+id/MSTButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTimeButtonClicked"
        android:text="@string/MSTButtonName" />

    <Button
        android:id="@+id/PSTButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onTimeButtonClicked"
        android:text="@string/PSTButtonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClearAllClicked"
        android:text="@string/ClearButtonName" />
</LinearLayout>