<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.archit.timeconverter.MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:padding="10dp"
            android:rowCount="4">

            <TextView
                android:id="@+id/textUTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_row="0"
                android:layout_rowSpan="1"
                android:text="@string/UTC"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputHours"
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_row="0"
                android:layout_rowSpan="1"
                android:ems="10"
                android:hint="@string/Hours"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textSep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_row="0"
                android:layout_rowSpan="1"
                android:text="@string/Colon" />

            <EditText
                android:id="@+id/inputMinutes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Minutes"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textButtonRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="1"
                android:text="@string/ButtonRadio"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/OnOffSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:layout_marginTop="10dp"
                android:onClick="onSwitchChanged"
                android:showText="true"
                android:splitTrack="false"
                android:textOff="@string/OFF"
                android:textOn="@string/ON" />

            <TextView
                android:id="@+id/resultView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginTop="10dp"
                android:text="@string/Result"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textSep2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:layout_rowSpan="1"
                android:text="@string/Colon" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/previousTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:text="Previous Day"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

        </GridLayout>

        <include
            android:id="@+id/buttonInclude"
            layout="@layout/button_layout" />

        <include
            android:id="@+id/radioInclude"
            layout="@layout/radio_layout"
            android:visibility="gone" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
